2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* configure.in (ALL_LINGUAS): po-properties/sr@ije.po added, so
	adding back sr@ije.

2004-02-25  Federico Mena Quintero  <federico@ximian.com>

	* configure.in (ALL_LINGUAS): Remove sr@ije until po-properties/
	is fixed for it.

Wed Feb 25 12:44:49 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.[ch]: Make realize and unrealize signals. (#73310)

Wed Feb 25 12:21:32 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.[ch] gtk/gtklabel.c: Patch from
	Padraig O'Briain to add gtk_widget_add/remove_mnemonic_label,
	gtk_widget_get_mnemonic_labels(). (#103456)

2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added sr@ije to ALL_LINGUAS.

Wed Feb 25 09:46:34 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.c (gtk_style_finalize): Free 
	style->icon_factories (#130128)

Wed Feb 25 03:52:58 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkpathbar.c: use gtk_widget_push/pop_composite_child around
	internal buttons.

	* gtk/gtkfilechooserdefault.c (struct _GtkFileChooserDefault):
	rename some widgets to make it clear where they are packed.
	(update_appearance): New function to handle all the 'logic' of
	layout in one place.  We aren't trying to keep all our properties
	in sync.
	(gtk_file_chooser_default_set_property): use update_appearance()

2004-02-24  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_model_create): Renamed
	from create_shortcuts_model().
	(struct _GtkFileChooserDefault): Renamed the shortcuts_tree field
	to shortcuts_list.
	(shortcuts_list_create): Renamed from shortcuts_tree_create().
	(create_file_list): Enable the tree view as a model drag source.
	(create_folder_tree): Likewise.

	* gtk/gtkfilesystemmodel.c (_gtk_file_system_model_get_type):
	Register the drag source interface.
	(drag_source_iface_init): New function.
	(drag_source_row_draggable): New function.
	(drag_source_drag_data_get): New function.
