@@ -1,3 +1,8 @@
+Wed Feb 25 16:00:40 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* gtk/gtkfilechooserdefault.c (update_appearance): move the
+	expander code.
+
 2004-02-25  Danilo Šegan  <dsegan@gmx.net>
 
 	* configure.in (ALL_LINGUAS): po-properties/sr@ije.po added, so
